--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
 	"keywords": ["framework", "laravel"],
 	"license": "MIT",
 	"require": {
-		"laravel/framework": "4.2.*"
+		"laravel/framework": "4.2.*",
+		"dingo/api": "~0.6.5"
 	},
 	"autoload": {
 		"classmap": [
