--- a/.gitignore
+++ b/.gitignore
@@ -27,22 +27,4 @@ api/docs
 .tmp
 # End generator-langular #
 
-# generator-langular #
-# dependencies
-assets/vendor
-node_modules
-# development
-public/angularapp
-public/css
-public/js
-public/json
-public/vendor
-# production
-public/angularapp.js
-public/styles.css
-public/vendors.js
-# docs
-api/docs
-# cache
-.tmp
-# End generator-langular #
+angularapp/*.js
