--- a/.grunt/aliases.yml
+++ b/.grunt/aliases.yml
@@ -9,6 +9,8 @@ build:dev:
   - symlink:json
   - symlink:stylesheet
   - symlink:vendor
+  - coffee
+  - sass
 build:prod:
   - clean:all
   - copy:font
@@ -17,13 +19,16 @@ build:prod:
   - processhtml:build_index
   - processhtml:build_templates
   - useminPrepare
+  - coffee
   - concat
   - uglify
+  - sass
   - cssmin
   - usemin
 build:doc:
   - apidoc:compile
 clean:all:
+  - clean:compiled
   - clean:dev
   - clean:prod
 dev:backend:
