--- a/package.json
+++ b/package.json
@@ -8,13 +8,10 @@
     "grunt-contrib-concat": "^0.3.0",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-cssmin": "^0.9.0",
-    
     "grunt-contrib-jshint": "~0.6.3",
     "grunt-contrib-symlink": "^0.3.0",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-watch": "~0.5.3",
-    
-    
     "grunt-concurrent": "~0.4.2",
     "grunt-newer": "~0.6.1",
     "grunt-notify": "^0.2.17",
@@ -29,5 +26,9 @@
   },
   "engines": {
     "node": ">=0.10.0"
+  },
+  "dependencies": {
+    "grunt-contrib-coffee": "^0.12.0",
+    "grunt-contrib-sass": "^0.8.1"
   }
 }
