--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
   "engines": {
     "node": ">=0.10.0"
   },
+  "license": "MIT",
   "dependencies": {
+    "bower": "^1.3.12",
+    "grunt-bower-requirejs": "^1.1.0",
     "grunt-contrib-coffee": "^0.12.0",
     "grunt-contrib-sass": "^0.8.1"
   }
