--- a/package.json
+++ b/package.json
@@ -22,16 +22,12 @@
     "jit-grunt": "~0.2.0",
     "time-grunt": "~0.2.8",
     "jshint-stylish": "^0.1.5",
-    "grunt-phplint": "0.0.5"
+    "grunt-phplint": "0.0.5",
+    "grunt-contrib-coffee": "^0.12.0",
+    "grunt-contrib-sass": "^0.8.1"
   },
   "engines": {
     "node": ">=0.10.0"
   },
-  "license": "MIT",
-  "dependencies": {
-    "bower": "^1.3.12",
-    "grunt-bower-requirejs": "^1.1.0",
-    "grunt-contrib-coffee": "^0.12.0",
-    "grunt-contrib-sass": "^0.8.1"
-  }
+  "license": "MIT"
 }
