--- a/bower.json
+++ b/bower.json
@@ -4,11 +4,11 @@
   "dependencies": {
     "angular": "=1.2.9",
     "angular-bootstrap": "~0.10.0",
-    "bootstrap": "~3.0.3",
     "underscore": "~1.5.2",
     "angular-underscore-module": "*",
     "requirejs": "*",
     "angular-ui-router": "~0.2.11",
-    "requirejs-domready": "~2.0.1"
+    "requirejs-domready": "~2.0.1",
+    "bootstrap-sass-official": "~3.2.0+2"
   }
 }
