--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,6 @@
     "requirejs": "*",
     "angular-ui-router": "~0.2.11",
     "requirejs-domready": "~2.0.1",
-    "bootstrap-sass-official": "~3.2.0+2"
+    "bootstrap-sass-official": "~3.2.0"
   }
 }
