--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "jshint-stylish": "^0.1.5",
     "grunt-phplint": "0.0.5",
     "grunt-contrib-coffee": "^0.12.0",
-    "grunt-contrib-sass": "^0.8.1"
+    "grunt-sass": "^0.14.2"
   },
   "engines": {
     "node": ">=0.10.0"
